--- a/Capstone/Views/Event/Details.cshtml
+++ b/Capstone/Views/Event/Details.cshtml
@@ -74,30 +74,30 @@
                             <div class="my-3 d-flex align-items-center text-center">
                                 <a class="eventBtn mx-1" href="@Url.Action("List", "Event")">Eventi</a>
                                 <a class="editBtn mx-1" href="@Url.Action("Edit", "Event", new { id = Model.EventId })">Modifica</a>
-                                <a class="btn-danger myBtnCart mx-1 " href="@Url.Action("Delete", "Event", new { id = Model.EventId })">Cancella</a>
+                                <a class="btn-danger myBtnCart mx-1 " href="@Url.Action("Delete", "Event", new { id = Model.EventId })">Elimina</a>
                             </div>
                                 <p class="mt-3">@Model.Description</p>
-                                <p class="text-danger fw-bolder">Dal @Model.DateFrom.Day/@Model.DateFrom.Month al @Model.DateTo.Day/@Model.DateTo.Month</p>
+                                <p class="text-danger fw-bolder my-3">Dal @Model.DateFrom.Day/@Model.DateFrom.Month al @Model.DateTo.Day/@Model.DateTo.Month</p>
                                 <p><i class="bi bi-geo-fill me-2"></i> @Model.Location.LocationName</p>
                                 <p>
                                     <i class="bi bi-tags-fill me-2">
                                         @foreach (var genre in Model.Genres)
                                         {
-                                            <span class="genre">@genre.Name</span>
+                                            <span class="genre text-nowrap">@genre.Name</span>
                                         }
                                     </i>
                                 </p>
-                                <div class="my-4" id="ticket">
+                                <div class="my-3" id="ticket">
                                     <h3>Acquista tickets</h3>
-                                    <p class="fs-4">@totalTickets <i class="bi bi-ticket-perforated-fill ms-1"></i> </p>
+                                    <p class="fs-4 mb-2">@totalTickets <i class="bi bi-ticket-perforated-fill ms-1"></i> </p>
                                     <form asp-action="AddToCart" asp-controller="Cart" method="post">
                                         <input type="hidden" name="eventId" value="@Model.EventId" />
                                         <div class="d-flex">
                                             <div class="form-group">
-                                                <input id="quantity" type="number" name="quantity" class="form-control quantitybar shadow-none border-0 me-2" value="1" min="1" required />
+                                            <input id="quantity" type="number" name="quantity" class="form-control inputBar shadow-none border-0 me-2" value="1" min="1" required />
                                             </div>
                                             <div class="form-group">
-                                                <select id="ticketTypeId" name="ticketTypeId" class="form-control quantitybar shadow-none border-0" required>
+                                            <select id="ticketTypeId" name="ticketTypeId" class="form-control inputBar shadow-none border-0" required>
                                                     @foreach (var eventTicketType in Model.EventTicketType)
                                                     {
                                                         var isSoldOut = eventTicketType.AvailableQuantity == 0;
@@ -117,7 +117,7 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <button type="submit" class="myBtnCart bg-danger text-end mt-3">Aggiungi al carrello</button>
+                                        <button type="submit" class="myBtnCart bg-danger text-center mt-2">Aggiungi al carrello</button>
                                     </form>
                                 </div>
                                 <div class="col-12">
@@ -155,7 +155,7 @@
                                     <div class="row">
                                         <!-- Google Maps Iframe -->
                                         <div class="col-md-10">
-                                            <div id="map" style="height: 300px; width: 100%; border-radius:25px"></div>
+                                            <div id="map" class="mt-3" style="height: 300px; width: 100%; border-radius:25px"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -226,17 +226,17 @@
 
                                     <div class="form-group">
                                         <label for="Title-@review.ReviewId" class="mb-1 ps-2">Modifica titolo:</label>
-                                        <input type="text" id="Title-@review.ReviewId" name="Title" class="form-control quantitybar shadow-none" required />
+                                        <input type="text" id="Title-@review.ReviewId" name="Title" class="form-control inputBar shadow-none" required />
                                     </div>
 
                                     <div class="form-group mt-4">
                                         <label for="Description-@review.ReviewId" class="mb-1 ps-2">Modifica descrizione:</label>
-                                        <textarea id="Description-@review.ReviewId" name="Description" class="form-control quantitybar shadow-none" required></textarea>
+                                        <textarea id="Description-@review.ReviewId" name="Description" class="form-control inputBar shadow-none" required></textarea>
                                     </div>
 
                                     <div class="form-group mt-4">
                                         <label for="Rating-@review.ReviewId" class="mb-1 ps-2">Modifica valutazione (da 1 a 5):</label>
-                                        <input type="number" id="Rating-@review.ReviewId" name="Rating" class="form-control quantitybar shadow-none" min="1" max="5" required />
+                                        <input type="number" id="Rating-@review.ReviewId" name="Rating" class="form-control inputBar shadow-none" min="1" max="5" required />
                                     </div>
 
                                     <div class="form-group mt-4">
@@ -272,17 +272,17 @@
 
                                     <div class="form-group">
                                         <label for="Title" class="mb-1 ps-2">Inserisci un titolo:</label>
-                                        <input type="text" id="Title" name="Title" class="form-control quantitybar shadow-none" required />
+                                        <input type="text" id="Title" name="Title" class="form-control inputBar shadow-none" required />
                                     </div>
 
                                     <div class="form-group mt-4">
                                         <label for="Description" class="mb-1 ps-2">Inserisci una descrizione:</label>
-                                        <textarea id="Description" name="Description" class="form-control quantitybar shadow-none" required></textarea>
+                                        <textarea id="Description" name="Description" class="form-control inputBar shadow-none" required></textarea>
                                     </div>
 
                                     <div class="form-group mt-4">
                                         <label for="Rating" class="mb-1 ps-2">Inserisci una valutazione (da 1 a 5):</label>
-                                        <input type="number" id="Rating" name="Rating" class="form-control quantitybar shadow-none" min="1" max="5" required />
+                                        <input type="number" id="Rating" name="Rating" class="form-control inputBar shadow-none" min="1" max="5" required />
                                     </div>
 
                                     <div class="form-group mt-4">
@@ -339,11 +339,11 @@
                         <div id="commentForm" class="col-12 col-md-10 col-lg-6 col-xl-5 my-4" style="display: none;">
                             <form asp-action="Create" asp-controller="Comment" method="post">
                                 <div class="form-group">
-                                    <textarea id="Description" name="Description" class="form-control quantitybar shadow-none place pt-3 px-3 border-0" placeholder="Scrivi un commento..." required></textarea>
+                                    <textarea id="Description" name="Description" class="form-control inputBar shadow-none place pt-3 px-3 border-0" placeholder="Scrivi un commento..." required></textarea>
                                 </div>
                                 <div id="gifSection" style="display:none;">
                                     <div class="form-group">
-                                        <input type="text" id="gifSearch" class="form-control quantitybar place shadow-none border-0 mt-2" placeholder="Cerca una GIF...">
+                                        <input type="text" id="gifSearch" class="form-control inputBar place shadow-none border-0 mt-2" placeholder="Cerca una GIF...">
                                     </div>
                                     <div id="gifResults" class="d-flex flex-wrap mt-3"></div>
                                     <div id="selectedGifContainer" style="display:none;">
