--- a/Capstone/wwwroot/css/site.css
+++ b/Capstone/wwwroot/css/site.css
@@ -1,6 +1,7 @@
 
 html {
     font-size: 18px !important;
+    background-color: black;
 }
 
 html::-webkit-scrollbar-track {
@@ -21,13 +22,14 @@ html::-webkit-scrollbar {
         background-color: #666666;
     }
 
-h1, h2, h3 {
+h1, h2, h3,h4,h5 {
     font-family: 'Montserrat', sans-serif!important;
     font-weight: 700;
 }
 
 p {
     font-weight: 400;
+    margin-bottom:0!important;
 }
 
 @media (min-width: 768px) {
@@ -447,3 +449,50 @@ body {
     .bgEdit{
         background-color: #c7a70eff;
     }
+
+    .inputBar {
+        background-color: #0303038b !important;
+        border-radius: 30px !important;
+        color: white !important;
+        border: 1px solid #666666 !important;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1) !important;
+    }
+
+    .inputBar:focus {
+        color: white !important;
+        background-color: #0303038b !important;
+    }
+
+.myBtnCart {
+    font-family: 'Montserrat', sans-serif !important;
+    border-radius: 2em;
+    border: none;
+    padding: 0.5em 1em;
+    color: white;
+    transition: 350ms;
+    text-decoration: none;
+}
+
+    .myBtnCart:hover {
+        background-color: #ff515173 !important;
+        transition: 350ms;
+    }
+
+.genre {
+    border-radius: 2em;
+    border: none;
+    padding: 0.25em 1em;
+    color: white;
+    font-size: 0.8rem;
+    background-color: #393939c9;
+}
+
+.genreEvent {
+    border-radius: 2em;
+    border: none;
+    padding: 0.1em 1em;
+    color: white;
+    font-size: 0.8rem;
+    background-color: #393939c9;
+}
+
